Updated Swagger documentation
