# routes/authRoutes.js
@@ -5,22 +5,6 @@ const Validator = require('../middlewares/Validator');
 
 const router = express.Router();
 
-/* @swagger
-* /registration:
-* POST:
-* summary: Register a new user
-* description: Register a new user with unique username, email amd a password.
-* parameters:
-* — in: path
-* name: id
-* required: true
-* description: ID of the resource to retrieve.
-* schema:
-* type: string
-* responses:
-* 200:
-* description: Successful response
-*/
 router.post(
 	'/registration', 
 	validate(Validator.registrationValidator),
